[tool.poetry]
name        = "cortex-autogen2"
version     = "0.1.0"
description = "Multi-agent coding assistant using AutoGen"
authors     = ["Your Name <your.email@example.com>"]
readme      = "README.md"
packages    = [{ include = "cortex_autogen2", from = "src" }]

# ─────────────────────────────────────────────────
# Core runtime (always installed)
# ─────────────────────────────────────────────────
[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# File-handling essentials
Pillow            = "^11.0.0"
python-magic      = "^0.4.27"
chardet           = "^5.2.0"
PyPDF2            = "^3.0.1"
pdfminer.six      = "^20221105"
docx2txt          = ">=0.9,<1.0"
openpyxl          = "^3.1.2"
xlrd              = "^2.0.1"
python-pptx       = "^0.6.23"
odfpy             = "^1.4.1"

# Infra / networking / AI you already had
autogen-agentchat = { extras = ["openai"], version = "^0.7.4" }
autogen-ext       = { extras = ["docker"], version = "^0.7.4" }
openai            = "^1.97.1"
tiktoken          = "^0.9.0"
python-dotenv     = "^1.0.1"
requests          = "^2.32.3"
redis             = "^5.0.4"
azure-storage-queue = "^12.10.1"
azure-storage-blob  = "^12.19.0"
sqlalchemy        = "^2.0.30"
pymysql           = "^1.1.1"
docker            = "^7.1.0"
playwright        = "^1.54.0"
markitdown        = "^0.1.2"
aiofiles          = "^24.1.0"
aiohttp           = "^3.12.14"
numpy             = "^1.26.0"
pandas            = "^2.3.1"
matplotlib        = "^3.10.3"
plotly            = "^5.24.1"
kaleido           = "^0.2.1"
lxml              = "^5.3.0"
reportlab         = "^4.2.5"
fpdf2             = "^2.7.9"
wordcloud         = "^1.9.3"

# ─────────────────────────────────────────────────
# Optional groups (install with: poetry install --with media,archives,science …)
# ─────────────────────────────────────────────────

[tool.poetry.group.media.dependencies]  # images / audio / video
opencv-python    = "^4.9.0"
imageio          = { version = "^2.34.0", extras = ["ffmpeg"] }
pyheif           = "^0.6.3"
moviepy          = "^1.0.3"
librosa          = "^0.10.1"
soundfile        = "^0.12.1"
pydub            = "^0.25.1"

[tool.poetry.group.archives.dependencies]
patool   = "^1.12"
py7zr    = "^0.21.0"
rarfile  = "^4.0"

[tool.poetry.group.science.dependencies]
tabula-py = "^2.8.1"
h5py      = "^3.10.0"
netCDF4   = "^1.6.5"
ezdxf     = "^1.1.1"

[tool.poetry.group.comm.dependencies]  # email / web / e-books
eml-parser       = "^1.15.0"
msg-parser       = ">=1.2.0,<2.0"
beautifulsoup4   = "^4.12.3"
ebooklib         = "^0.18"

[tool.poetry.group.extras.dependencies]  # seldom-needed odds & ends
imageio-ffmpeg = "^0.4.9"
python-lzf     = "^0.2.4"

# ─────────────────────────────────────────────────
# Development-only deps
# ─────────────────────────────────────────────────
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

# ─────────────────────────────────────────────────
[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
